Slide Vertices causes Crash in Edit mode #116017

Closed
opened 2023-12-11 02:49:28 +01:00 by Diego Verger · 13 comments

System Information
Operating system: Linux-6.2.0-39-generic-x86_64-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 470.223.02

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-09 19:53, hash: 79dff8174b80

Short description of error
There is a crash when you select Slide Vertices or use the shortcut Shift V or press G twice to slide.

Exact steps for others to reproduce the error

  1. In Edit mode, select a vertex
  2. Press G twice to slide it

This might be related to the previously reported crash with Inset #116016

Thank you

**System Information** Operating system: Linux-6.2.0-39-generic-x86_64-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 470.223.02 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-09 19:53, hash: `79dff8174b80` **Short description of error** There is a crash when you select Slide Vertices or use the shortcut Shift V or press G twice to slide. **Exact steps for others to reproduce the error** 1. In Edit mode, select a vertex 2. Press G twice to slide it This might be related to the previously reported crash with Inset #116016 Thank you
Diego Verger added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-11 02:49:29 +01:00

This is also a duplicate of #115994 with the same commit causing the problem. Please subscribe to the other issue for further updates on the matter.

This is also a duplicate of #115994 with the same commit causing the problem. Please subscribe to the other issue for further updates on the matter.
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-12-11 04:28:16 +01:00
Jesse Yurkovich added
Status
Duplicate
and removed
Status
Archived
labels 2023-12-11 04:28:24 +01:00
Author

I'm still getting this crash by sliding a single vertex in 402cec5646. Same steps as described in this report.

Sliding 2 or more vertices, or after a loop cut as mentioned in #115994 is working fine in 402cec5646. And the Inset Faces crash #116016 has also been fixed, thank you!

I'm still getting this crash by sliding a single vertex in 402cec56467b. Same steps as described in this report. Sliding 2 or more vertices, or after a loop cut as mentioned in #115994 is working fine in 402cec56467b. And the Inset Faces crash #116016 has also been fixed, thank you!
Blender Bot added
Status
Needs Triage
and removed
Status
Duplicate
labels 2023-12-13 06:06:48 +01:00
Member

@Diego3D hi, sliding single vertex did not trigger the crash for me in today's build. Can you share crash logs?: https://docs.blender.org/manual/en/dev/troubleshooting/crash.html#windows

Also attach .blend file if crash is observed in particular file.

@Diego3D hi, sliding single vertex did not trigger the crash for me in today's build. Can you share crash logs?: https://docs.blender.org/manual/en/dev/troubleshooting/crash.html#windows Also attach .blend file if crash is observed in particular file.
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-12-13 07:39:27 +01:00
Author

Thank you Pratik. Please find attached my crash log. This is in today's build f01bc93bcf.

Thank you Pratik. Please find attached my crash log. This is in today's build f01bc93bcf2c.
Member

Thanks. Functions calls in Stack trace are missing in attached crash.txt. So I don't have much idea about the possible cause here.
Can you try factory reset?: File > Defaults > Load Factory Settings

@deadpin , can you replicate the crash?

Thanks. Functions calls in Stack trace are missing in attached crash.txt. So I don't have much idea about the possible cause here. Can you try factory reset?: `File > Defaults > Load Factory Settings` @deadpin , can you replicate the crash?

Strange, no crash on Windows but I do get a crash on Linux. I don't have a build setup, just using the daily bot build, so my crash file is also empty and can't debug further :(

My repro is just: Go to edit mode on default Cube and GG one of the vertices.

Strange, no crash on Windows but I do get a crash on Linux. I don't have a build setup, just using the daily bot build, so my crash file is also empty and can't debug further :( My repro is just: Go to edit mode on default Cube and GG one of the vertices.
Member

Thanks.

I don't have a build setup, just using the daily bot build

Let's ask @lichtwerk , he is on linux :)

Thanks. > I don't have a build setup, just using the daily bot build Let's ask @lichtwerk , he is on linux :)
Member

Yep, can confirm the crash is still happening (for some reason, not able to trigger in Debug builds though...)

@HooglyBoogly : mind checking?

Yep, can confirm the crash is still happening (for some reason, not able to trigger in Debug builds though...) @HooglyBoogly : mind checking?
Member

Think this is actually caused by d742f08cc6, will do a bit more digging...

Think this is actually caused by d742f08cc656553c5131bf736a0ed7d4d564d68c, will do a bit more digging...
Philipp Oeser self-assigned this 2023-12-14 14:22:35 +01:00
Member

Annoyingly, I can't reproduce the crash in debug builds, only release builds. I'll try bisecting next, maybe that will help.

Annoyingly, I can't reproduce the crash in debug builds, only release builds. I'll try bisecting next, maybe that will help.
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-12-14 15:30:22 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-14 15:30:41 +01:00
Author

I continue to get this cash on Linux in today's 3e635c3eed. I also tried with a Factory Reset as Pratik suggested.

I then run blender from the terminal and got this message when it crashed:
Segmentation fault (core dumped)

Thanks

I continue to get this cash on Linux in today's 3e635c3eed3f. I also tried with a Factory Reset as Pratik suggested. I then run blender from the terminal and got this message when it crashed: **Segmentation fault (core dumped)** Thanks
Member

That commit was 13 hours ago. I committed a fix 2 hours ago. This should be working in the next daily build

That commit was 13 hours ago. I committed a fix 2 hours ago. This should be working in the next daily build
Author

Great, thank you Hans.

Great, thank you Hans.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116017
No description provided.