Fix #116017: Mesh edit mode vertex slide allocation ignores alignment

`float4x4` requires 16 byte alignment. The compiler can add padding
within the struct, but the allocation needs to know about the alignment
too. Fix by using an allocation function that handles this properly.